grammar.js
    source_file: $ => seq(
      optional(choice(seq(optional($._sep), $.shebang, optional($._sep)), $._sep)),
      optional(seq(
        $._declaration_or_statement,
        repeat(seq($._sep, $._declaration_or_statement)),
        optional($._sep),
      )),
    ),

    _sep: $ => repeat1($._terminator),

    _declaration_or_statement: $ => choice(
      $.feature_flag,
      $.include_declaration,
      $.import_declaration,
      $.params_definition,
      $.param_assignment,
      $.record_definition,
      $.enum_definition,
      $.agent_definition,
      $.process_definition,
      $.workflow_definition,
      $.output_definition,
      $.function_definition,
      $._statement,
    ),

    process_definition: $ => seq(
      'process',
      field('name', $._identifier),
      sectionedBody($, [
        $.input_section,
        $.stage_section,
        $.output_section,
        $.topic_section,
        $.when_section,
        $.script_section,
        $.stub_section,
      ]),
    ),

    script_section: $ => section($, choice('script', 'shell', 'exec'), $._statement),

    workflow_definition: $ => seq(
      'workflow',
      optional(field('name', $._identifier)),
      sectionedBody($, [
        $.take_section,
        $.main_section,
        $.emit_section,
        $.publish_section,
        $.on_complete_section,
        $.on_error_section,
      ]),
    ),

    take_section: $ => section($, 'take', choice($.workflow_take, $._statement)),

    workflow_take: $ => prec(1, seq(
      field('name', $._identifier),
      optional(seq(':', field('type', $.type))),
    )),

    main_section: $ => section($, 'main', $._statement),

    emit_section: $ => section($, 'emit', choice($.workflow_emit, $._statement)),

    workflow_emit: $ => prec(1, seq(
      field('name', $._identifier),
      optional(seq(':', field('type', $.type))),
      optional(seq('=', field('value', $._expression))),
    )),

    parameters: $ => seq('(', optional(commaSep1($.parameter)), ')'),

    _statement: $ => choice(
      $.if_statement,
      $.try_statement,
      $.for_statement,
      $.return_statement,
      $.throw_statement,
      $.assert_statement,
      $.variable_declaration,
      $.assignment,
      $.expression_statement,
    ),

    block: $ => prec(1, seq('{', optional($._sep), optional($._statements), '}')),

    // Labels are only meaningful in closures (multiMap/branch criteria), but
    // blocks and closures share one body so `{` can stay undecided until `}`.
    _statements: $ => seq(
      sepBy1($._sep, choice($._statement, $.labeled_statement)),
      optional($._sep),
    ),

    _statement_or_block: $ => choice($.block, $._statement),

    if_statement: $ => prec.right(seq(
      'if',
      '(',
      field('condition', $._expression),
      ')',
      field('consequence', $._statement_or_block),
      optional(seq('else', field('alternative', $._statement_or_block))),
    )),

    variable_declaration: $ => choice(
      seq(
        'def',
        field('name', $._identifier),
        optional(seq(':', field('type', $.type))),
        optional(seq('=', field('value', $._expression))),
      ),
      seq('def', field('pattern', $.destructuring_pattern), '=', field('value', $._expression)),
      prec.dynamic(1, seq(
        'def',
        field('type', $.type),
        field('name', $._identifier),
        optional(seq('=', field('value', $._expression))),
      )),
      // ANTLR requires a capitalized class name here, which tree-sitter cannot
      // check, so without an initializer `path reads` stays a command call.
      prec.dynamic(-2, seq(
        field('type', $.type),
        field('name', $._identifier),
        optional(seq('=', field('value', $._expression))),
      )),
    ),

    // (a, b) or (a: String, b: Integer)
    destructuring_pattern: $ => seq(
      '(',
      $._name_type_pair,
      repeat1(seq(',', $._name_type_pair)),
      ')',
    ),

    _name_type_pair: $ => seq(
      field('name', $._identifier),
      optional(seq(':', field('type', $.type))),
    ),

    assignment: $ => seq(
      field('left', choice($._expression, $.destructuring_pattern)),
      field('operator', choice(...ASSIGNMENT_OPERATORS)),
      field('right', $._expression),
    ),

    expression_statement: $ => choice($._expression, $.command_expression),

    // A call without parentheses, only valid as a statement and only when the
    // callee is a name or a property: println "x", log.info "x", path x, emit: y
    command_expression: $ => prec.dynamic(-1, seq(
      field('function', choice($._identifier, $.member_expression)),
      field('arguments', alias($._command_arguments, $.argument_list)),
    )),

    _command_arguments: $ => commaSep1($._argument),

    labeled_statement: $ => seq(
      field('label', $._identifier),
      ':',
      choice($.labeled_statement, $._statement),
    ),

    // -- expressions

    _expression: $ => choice(
      $._identifier,
      $.integer_literal,
      $.float_literal,
      $.boolean_literal,
      $.null_literal,
      $.string,
      $.slashy_string,
      $.parenthesized_expression,
      $.list,
      $.map,
      $.closure,
      $.new_expression,
      $.member_expression,
      $.call_expression,
      $.index_expression,
      $.unary_expression,
      $.binary_expression,
      $.cast_expression,
      $.instanceof_expression,
      $.ternary_expression,
      $.elvis_expression,
    ),

    // Nextflow keywords that are also valid names (ANTLR's `identifier` rule),
    // e.g. `workflow.onComplete { }` or `input = ...` in a script prelude.
    _identifier: $ => choice(
      $.identifier,
      prec(-1, alias(choice(...CONTEXTUAL_KEYWORDS), $.identifier)),
    ),

    parenthesized_expression: $ => seq('(', $._expression, ')'),

    list: $ => seq('[', optional(seq(commaSep1($._expression), optional(','))), ']'),

    map: $ => seq(
      '[',
      choice(':', seq(commaSep1($.map_entry), optional(','))),
      ']',
    ),

    map_entry: $ => seq(
      field('key', choice(
        $._identifier,
        $.string,
        $.integer_literal,
        $.float_literal,
        $.boolean_literal,
        $.null_literal,
        $.parenthesized_expression,
      )),
      ':',
      field('value', $._expression),
    ),

    closure: $ => seq(
      '{',
      optional($._sep),
      optional(seq(
        optional(field('parameters', alias($._closure_parameters, $.parameters))),
        '->',
        optional($._sep),
      )),
      optional($._statements),
      '}',
    ),

    _closure_parameters: $ => commaSep1($.parameter),

    member_expression: $ => prec(PREC.postfix, seq(
      field('object', $._expression),
      field('operator', choice('.', '?.', '*.')),
      field('property', choice($._identifier, $.string)),
    )),

    call_expression: $ => prec.right(PREC.postfix, seq(
      field('function', $._expression),
      choice(
        seq(field('arguments', $.argument_list), optional(field('closure', $.closure))),
        field('closure', $.closure),
      ),
    )),

    argument_list: $ => seq(
      '(',
      optional(seq(commaSep1($._argument), optional(','))),
      ')',
    ),

    _argument: $ => choice($._expression, $.named_argument),

    binary_expression: $ => {
      const table = [
        [prec.left, PREC.power, '**'],
        [prec.left, PREC.multiplicative, choice('*', '/', '%')],
        [prec.left, PREC.additive, choice('+', '-')],
        [prec.left, PREC.shift, choice('<<', '>>', '>>>', '..', '..<')],
        [prec.left, PREC.relational, choice('<', '>', '<=', '>=', 'in', '!in')],
        [prec.left, PREC.equality, choice('==', '!=', '<=>')],
        [prec.left, PREC.regex, choice('=~', '==~')],
        [prec.left, PREC.bitand, '&'],
        [prec.left, PREC.xor, '^'],
        [prec.left, PREC.bitor, '|'],
        [prec.left, PREC.and, '&&'],
        [prec.left, PREC.or, '||'],
      ];
      return choice(...table.map(([assoc, level, operator]) => assoc(level, seq(
        field('left', $._expression),
        // @ts-ignore
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    type: $ => seq(
      $._type_name,
      optional('?'),
      repeat(seq('[', ']')),
    ),

    // Precedence only on the continuations, so `.` and `<` extend the type
    // while `String x` stays ambiguous (declaration vs command call) for GLR.
    _type_name: $ => seq(
      $._identifier,
      repeat(prec(1, seq('.', $._identifier))),
      optional(prec(1, $.type_arguments)),
    ),

    identifier: _ => /\$?[\p{L}_][\p{L}\p{Nd}_]*/,

    integer_literal: _ => token(choice(
      /0[xX][0-9a-fA-F](_*[0-9a-fA-F])*[lLiIgG]?/,
      /0[bB][01](_*[01])*[lLiIgG]?/,
      /\d(_*\d)*[lLiIgG]?/,
    )),

    string: $ => choice(
      seq(
        '\'',
        repeat(choice(alias($._sq_content, $.string_content), $.escape_sequence)),
        '\'',
      ),
      seq(
        '"',
        repeat(choice(alias($._dq_content, $.string_content), $.escape_sequence, $.interpolation)),
        '"',
      ),
      seq(
        '\'\'\'',
        repeat(choice(
          alias($._tsq_content, $.string_content),
          alias($._tsq_quote, $.string_content),
          $.escape_sequence,
        )),
        '\'\'\'',
      ),
      seq(
        '"""',
        repeat(choice(
          alias($._tdq_content, $.string_content),
          alias($._tdq_quote, $.string_content),
          $.escape_sequence,
          $.interpolation,
        )),
        '"""',
      ),
    ),

    // prec(1) so `//` inside a string is content, not a comment.
    _sq_content: _ => token.immediate(prec(1, /[^'\\\n]+/)),
    _dq_content: _ => token.immediate(prec(1, /[^"\\$\n]+/)),
    _tsq_content: _ => token.immediate(prec(1, /([^'\\]|'[^'\\]|''[^'\\])+/)),
    _tdq_content: _ => token.immediate(prec(1, /([^"\\$]|"[^"\\$]|""[^"\\$])+/)),
    // A lone or doubled quote right before an escape, interpolation, or the
    // closing delimiter, which the content tokens above cannot absorb.
    _tsq_quote: _ => token.immediate(/''?/),
    _tdq_quote: _ => token.immediate(/""?/),

    interpolation: $ => choice(
      seq(token.immediate('${'), $._expression, '}'),
      seq(
        token.immediate('$'),
        alias($._gstring_identifier, $.identifier),
        repeat(seq(alias($._gstring_path_dot, '.'), alias($._gstring_identifier, $.identifier))),
      ),
    ),

    _gstring_identifier: _ => token.immediate(prec(2, /[\p{L}_][\p{L}\p{Nd}_]*/)),
