test/corpus/basic/workflow_definition.txt
==================
Basic workflow declaration
==================

workflow {
    "Hello world"
}

---

(source_file
  (workflow_definition
    (expression_statement
      (string
        (string_content)))))

==================
Workflow with input
==================

workflow {
    take:
    x
    y

    main:
    "Processing ${x} and ${y}"
}

---

(source_file
  (workflow_definition
    (take_section
      (workflow_take
        (identifier))
      (workflow_take
        (identifier)))
    (main_section
      (expression_statement
        (string
          (string_content)
          (interpolation
            (identifier))
          (string_content)
          (interpolation
            (identifier)))))))

==================
Workflow with process calls
==================

workflow {
    PROCESS_A()
    PROCESS_B()
}

---

(source_file
  (workflow_definition
    (expression_statement
      (call_expression
        (identifier)
        (argument_list)))
    (expression_statement
      (call_expression
        (identifier)
        (argument_list)))))

==================
Complete workflow definition
==================

workflow {
    take:
    reads
    reference

    main:
    ALIGN(reads, reference)
    CALL_VARIANTS(ALIGN.out)

    emit:
    variants = CALL_VARIANTS.out
}

---

(source_file
  (workflow_definition
    (take_section
      (workflow_take
        (identifier))
      (workflow_take
        (identifier)))
    (main_section
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (identifier)
            (identifier))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (member_expression
              (identifier)
              (identifier))))))
    (emit_section
      (workflow_emit
        (identifier)
        (member_expression
          (identifier)
          (identifier))))))

==================
Workflow composability
==================

workflow ALIGN_READS {
    take:
    reads
    index

    main:
    BWA_ALIGN(reads, index)
    SAMTOOLS_SORT(BWA_ALIGN.out)

    emit:
    bam = SAMTOOLS_SORT.out.bam
}

---

(source_file
  (workflow_definition
    (identifier)
    (take_section
      (workflow_take
        (identifier))
      (workflow_take
        (identifier)))
    (main_section
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (identifier)
            (identifier))))
      (expression_statement
        (call_expression
          (identifier)
          (argument_list
            (member_expression
              (identifier)
              (identifier))))))
    (emit_section
      (workflow_emit
        (identifier)
        (member_expression
          (member_expression
            (identifier)
            (identifier))
          (identifier))))))

==================
Named workflow outputs
==================

workflow {
    FASTQC(reads)
    BWA_INDEX(reference)
    BWA_ALIGN(reads, BWA_INDEX.out.index)

    emit:
    fastqc_html = FASTQC.out.html
    bam = BWA_ALIGN.out.bam
}

---

(source_file
  (workflow_definition
    (expression_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier))))
    (expression_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier))))
    (expression_statement
      (call_expression
        (identifier)
        (argument_list
          (identifier)
          (member_expression
            (member_expression
              (identifier)
              (identifier))
            (identifier)))))
    (emit_section
      (workflow_emit
        (identifier)
        (member_expression
          (member_expression
            (identifier)
            (identifier))
          (identifier)))
      (workflow_emit
        (identifier)
        (member_expression
          (member_expression
            (identifier)
            (identifier))
          (identifier))))))
