test/corpus/closures.txt
==================
Single parameter closure
==================

def square = { x -> x * x }
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (identifier))
      (binary_expression
        (identifier)
        (identifier)))))

==================
Multiple parameter closure
==================

def add = { a, b -> a + b }
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (identifier)
        (identifier))
      (binary_expression
        (identifier)
        (identifier)))))

==================
Multi-line closure with statements
==================

def process = { v ->
    println 'Hello!'
    println "Processing value"
    v * v
}
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (identifier))
      (closure_body
        (command_expression
          (identifier)
          (string))
        (command_expression
          (identifier)
          (string))
        (binary_expression
          (identifier)
          (identifier))))))

==================
Closure with variable declarations
==================

def compute = { x, y ->
    def result = x + y
    result * 2
}
---

(source_file
  (variable_declaration
    (identifier)
    (closure
      (parameters
        (identifier)
        (identifier))
      (closure_body
        (variable_declaration
          (identifier)
          (binary_expression
            (identifier)
            (identifier)))
        (binary_expression
          (identifier)
          (number)))))) 
