test/corpus/config.txt
==================
Config file
==================

process {
    executor = 'slurm'
    queue = 'long'
    memory = '10 GB'
    time = '24h'
}

executor {
    name = 'slurm'
    queueSize = 100
}

---

(source_file
  (expression_statement
    (call_expression
      (identifier)
      (closure
        (assignment
          (identifier)
          (string
            (string_content)))
        (assignment
          (identifier)
          (string
            (string_content)))
        (assignment
          (identifier)
          (string
            (string_content)))
        (assignment
          (identifier)
          (string
            (string_content))))))
  (expression_statement
    (call_expression
      (identifier)
      (closure
        (assignment
          (identifier)
          (string
            (string_content)))
        (assignment
          (identifier)
          (integer_literal))))))

==================
Profiles
==================

profiles {
    standard {
        process.executor = 'local'
    }
    cluster {
        process.executor = 'slurm'
        process.queue = 'long'
    }
    cloud {
        process.executor = 'aws'
        aws.region = 'us-east-1'
    }
}

---

(source_file
  (expression_statement
    (call_expression
      (identifier)
      (closure
        (expression_statement
          (call_expression
            (identifier)
            (closure
              (assignment
                (member_expression
                  (identifier)
                  (identifier))
                (string
                  (string_content))))))
        (expression_statement
          (call_expression
            (identifier)
            (closure
              (assignment
                (member_expression
                  (identifier)
                  (identifier))
                (string
                  (string_content)))
              (assignment
                (member_expression
                  (identifier)
                  (identifier))
                (string
                  (string_content))))))
        (expression_statement
          (call_expression
            (identifier)
            (closure
              (assignment
                (member_expression
                  (identifier)
                  (identifier))
                (string
                  (string_content)))
              (assignment
                (member_expression
                  (identifier)
                  (identifier))
                (string
                  (string_content))))))))))

==================
Environment variables
==================

env {
    SOME_VAR = 'value'
    PATH = "$PATH:/some/extra/path"
}

process {
    env.JAVA_OPTS = '-Xmx2G'
}

---

(source_file
  (expression_statement
    (call_expression
      (identifier)
      (closure
        (assignment
          (identifier)
          (string
            (string_content)))
        (assignment
          (identifier)
          (string
            (interpolation
              (identifier))
            (string_content))))))
  (expression_statement
    (call_expression
      (identifier)
      (closure
        (assignment
          (member_expression
            (identifier)
            (identifier))
          (string
            (string_content)))))))

==================
Agent scope
==================

agent.runner = 'langchain4j'

agent {
    runner = 'pi'
    apiKey = secrets.LLM_KEY
    rpc.remoteHost = 'nextflow-driver.default.svc'

    withName: '!critic' { maxRetries = 3 }
    withLabel: 'reasoning' {
        model = 'openai/gpt-5'
    }
}

---

(source_file
  (assignment
    (member_expression
      (identifier)
      (identifier))
    (string
      (string_content)))
  (expression_statement
    (call_expression
      (identifier)
      (closure
        (assignment
          (identifier)
          (string
            (string_content)))
        (assignment
          (identifier)
          (member_expression
            (identifier)
            (identifier)))
        (assignment
          (member_expression
            (identifier)
            (identifier))
          (string
            (string_content)))
        (labeled_statement
          (identifier)
          (expression_statement
            (call_expression
              (string
                (string_content))
              (closure
                (assignment
                  (identifier)
                  (integer_literal))))))
        (labeled_statement
          (identifier)
          (expression_statement
            (call_expression
              (string
                (string_content))
              (closure
                (assignment
                  (identifier)
                  (string
                    (string_content)))))))))))
